--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
 title: 4248 Github Pages Theme
+show_downloads: true
+show_releases: true
